Fix: Section div was covering navbar as vh was set to 100. Changed section vh to 90 and navbar to 10vh to restore interactive function

--- a/_navbar.css
+++ b/_navbar.css
@@ -9,6 +9,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  height: 10vh;
 }
 
 .logo {
@@ -16,7 +17,6 @@
   color: var(--text);
   font-weight: 600;
   pointer-events: none;
-  cursor: default;
   opacity: 0;
   animation: slideTop 1s ease forwards;
 }
