--- a/style.css
+++ b/style.css
@@ -50,6 +50,6 @@ body {
 }
 
 section {
-  min-height: 100vh;
+  min-height: 90vh;
   padding: 10rem 9% 2rem;
 }
